# kr_challenge

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/: lib.rs
grpc-client/: Cargo.toml  README.md
grpc-client/src/: config.rs  main.rs
orderbook/: Cargo.toml
orderbook/proto/: orderbook.proto
orderbook/src/: lib.rs
rest-types/: Cargo.toml
rest-types/src/: lib.rs
server/: Cargo.toml  README.md
server/src/: aggregator.rs  config.rs  grpc_server.rs  main.rs
server/src/exchanges/: binance.rs  bitstamp.rs  mod.rs
tui-client/: Cargo.toml
tui-client/src/: command.rs  events.rs  main.rs  state.rs  ui.rs  ui_state.rs
