[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
common = { path = "../common" }
envconfig = "0.10.0"
futures = "0.3.28"
futures-util = "0.3"
fxhash = "0.2.1"
orderbook = { path = "../orderbook" }
prost = "0.11"
rest-types = { path = "../rest-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
tonic = "0.9"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.3.1"
