[package]
name = "tui-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
crossterm = "0.26.1"
futures = "0.3.28"
orderbook = { path = "../orderbook" }
tokio = { version = "1.28.0", features = ["full"] }
tonic = "0.9"
tui = "0.19.0"
